'traducao_e_link_comunidade'

--- a/apps/builder/src/i18n/pt-BR.json
+++ b/apps/builder/src/i18n/pt-BR.json
@@ -49,7 +49,7 @@
   "auth.register.alreadyHaveAccountLabel.link": "Entrar",
   "auth.register.alreadyHaveAccountLabel.preLink": "Já tem uma conta?",
   "auth.register.heading": "Criar uma conta",
-  "auth.signin.heading": "Entrar",
+  "auth.signin.heading": "Entrar no ChatEcom",
   "auth.signin.noAccountLabel.link": "Registre-se gratuitamente",
   "auth.signin.noAccountLabel.preLink": "Não tem uma conta?",
   "auth.signinErrorToast.description": "As inscrições estão desativadas.",
@@ -110,7 +110,7 @@
   "billing.upgradeLimitLabel": "Você precisa atualizar sua assinatura para {type}",
   "billing.usage.chats.alert.soonReach": "Seus ecomBots são populares! Você logo alcançará o limite de chats de seu plano.",
   "billing.usage.chats.alert.updatePlan": "Certifique-se de atualizar seu plano para aumentar esse limite e continuar conversando com seus usuários.",
-  "billing.usage.chats.heading": "Chats",
+  "billing.usage.chats.heading": "EcomChats",
   "billing.usage.heading": "Uso",
   "billing.usage.unlimited": "Ilimitado",
   "blocks.bubbles.embed.blockCard.tooltip": "Incorporar pdf, iframe, website...",
