'troquei-o-typebots-da-url-por-ecombots'

--- a/apps/builder/src/i18n/pt.json
+++ b/apps/builder/src/i18n/pt.json
@@ -49,8 +49,8 @@
   "auth.register.alreadyHaveAccountLabel.link": "Entrar",
   "auth.register.alreadyHaveAccountLabel.preLink": "Já tem uma conta?",
   "auth.register.heading": "Criar uma conta",
-  "auth.signin.heading": "Entrar",
-  "auth.signin.noAccountLabel.link": "Registe-se gratuitamente",
+  "auth.signin.heading": "Entrar no ChatEcom",
+  "auth.signin.noAccountLabel.link": "Registre-se aqui",
   "auth.signin.noAccountLabel.preLink": "Não tem uma conta?",
   "auth.signinErrorToast.description": "As inscrições estão desativadas.",
   "auth.signinErrorToast.title": "Não autorizado",
