'traduzi-theme-settings-config-google-api-do-unsplash-tirei-giphy'

--- a/apps/builder/src/i18n/pt-BR.json
+++ b/apps/builder/src/i18n/pt-BR.json
@@ -415,7 +415,7 @@
   "templates.modal.useTemplateButton.label": "Usar esse modelo",
   "theme.sideMenu.chat": "Chat",
   "theme.sideMenu.chat.botAvatar": "Avatar do bot",
-  "theme.sideMenu.chat.botBubbles": "Bubbles do bot",
+  "theme.sideMenu.chat.botBubbles": "Resposta do bot",
   "theme.sideMenu.chat.buttons": "Botões",
   "theme.sideMenu.chat.cornersRoundness": "Esfericidade dos cantos",
   "theme.sideMenu.chat.inputs": "Inputs",
@@ -423,7 +423,7 @@
   "theme.sideMenu.chat.theme.placeholder": "Texto do placeholder:",
   "theme.sideMenu.chat.theme.text": "Texto:",
   "theme.sideMenu.chat.userAvatar": "Avatar do usuário",
-  "theme.sideMenu.chat.userBubbles": "Bubbles do usuário",
+  "theme.sideMenu.chat.userBubbles": "Resposta do usuário",
   "theme.sideMenu.customCSS": "Customizar CSS",
   "theme.sideMenu.global": "Global",
   "theme.sideMenu.global.background": "Plano de fundo",
