--- a/apps/builder/src/i18n/pt.json
+++ b/apps/builder/src/i18n/pt.json
@@ -239,6 +239,39 @@
   "templates.modal.menuHeading.other": "Outros",
   "templates.modal.menuHeading.product": "Produto",
   "templates.modal.useTemplateButton.label": "Usar este modelo",
+  "theme.sideMenu.chat": "Chat",
+  "theme.sideMenu.chat.botAvatar": "Avatar do bot",
+  "theme.sideMenu.chat.botBubbles": "Resposta do bot",
+  "theme.sideMenu.chat.buttons": "Botões",
+  "theme.sideMenu.chat.cornersRoundness": "Esfericidade dos cantos",
+  "theme.sideMenu.chat.inputs": "Inputs",
+  "theme.sideMenu.chat.theme.background": "Plano de fundo:",
+  "theme.sideMenu.chat.theme.placeholder": "Texto do placeholder:",
+  "theme.sideMenu.chat.theme.text": "Texto:",
+  "theme.sideMenu.chat.userAvatar": "Avatar do usuário",
+  "theme.sideMenu.chat.userBubbles": "Resposta do usuário",
+  "theme.sideMenu.customCSS": "Customizar CSS",
+  "theme.sideMenu.global": "Global",
+  "theme.sideMenu.global.background": "Plano de fundo",
+  "theme.sideMenu.global.background.color": "Cor do plano de fundo:",
+  "theme.sideMenu.global.background.color.select": "Cor",
+  "theme.sideMenu.global.background.image.alt": "Imagem do plano de fundo",
+  "theme.sideMenu.global.background.image.button": "Selecione uma imagem",
+  "theme.sideMenu.global.background.image.select": "Imagem",
+  "theme.sideMenu.global.background.none.select": "Nenhum",
+  "theme.sideMenu.global.font": "Fonte",
+  "theme.sideMenu.global.typebotBrand": "Mostrar marca do ecomBot",
+  "theme.sideMenu.template": "Templates",
+  "theme.sideMenu.template.gallery": "Galeria",
+  "theme.sideMenu.template.gallery.avatarPreview.alt": "Pré-visualização do avatar no cartão do tema do template",
+  "theme.sideMenu.template.myTemplates": "Meus templates",
+  "theme.sideMenu.template.myTemplates.menu.ariaLabel": "Abrir menu do template",
+  "theme.sideMenu.template.myTemplates.saveTheme": "Salvar tema atual",
+  "theme.sideMenu.template.myTemplates.saveTheme.myTemplate": "Meu template",
+  "theme.sideMenu.template.myTemplates.saveTheme.name": "Nome:",
+  "theme.sideMenu.template.myTemplates.saveTheme.saveAsNew": "Salvar como novo template",
+  "theme.sideMenu.template.myTemplates.saveTheme.title": "Salvar tema",
+  "theme.sideMenu.title": "Customize o tema",
   "upgrade": "Upgrade",
   "video.aspectRatioInput.label": "Proporção",
   "video.aspectRatioInput.moreInfoTooltip": "Exemplo: \"16/9\" ou \"9/16\"",
