--- a/apps/builder/src/i18n/pt.json
+++ b/apps/builder/src/i18n/pt.json
@@ -10,7 +10,7 @@
   "account.apiTokens.createModal.securityWarning": "Por razões de segurança, não o podemos mostrar novamente.",
   "account.apiTokens.deleteButton.label": "Excluir",
   "account.apiTokens.deleteConfirmationMessage": "O token <strong>tokenName</strong> será revogado permanentemente. Tem a certeza de que deseja continuar?",
-  "account.apiTokens.description": "Estes tokens permitem que outras aplicações controlem toda a sua conta e ecomBots. Tenha cuidado!",
+  "account.apiTokens.description": "Estes tokens permitem que outras aplicações controlem toda a sua conta e EcomBots. Tenha cuidado!",
   "account.apiTokens.heading": "Tokens de API",
   "account.apiTokens.table.createdHeader": "Criado",
   "account.apiTokens.table.nameHeader": "Nome",
@@ -108,7 +108,7 @@
   "billing.updateSuccessToast.description": "A sua subscrição {plan} foi atualizada com sucesso",
   "billing.upgradeAlert.buttonDefaultLabel": "Mais informações",
   "billing.upgradeLimitLabel": "Precisa de atualizar a sua subscrição para {type}",
-  "billing.usage.chats.alert.soonReach": "Os seus ecomBots são populares! Vai alcançar em breve o limite de chats do seu plano.",
+  "billing.usage.chats.alert.soonReach": "Os seus EcomBots são populares! Vai alcançar em breve o limite de chats do seu plano.",
   "billing.usage.chats.alert.updatePlan": "Certifique-se de atualizar o seu plano para aumentar esse limite e continuar a conversar com os seus utilizadores.",
   "billing.usage.chats.heading": "Chats",
   "billing.usage.heading": "Uso",
@@ -134,12 +134,12 @@
   "confirmModal.defaultTitle": "Tem a certeza?",
   "dashboard.header.settingsButton.label": "Configurações & Membros",
   "dashboard.redirectionMessage": "Está a ser redirecionado...",
-  "dashboard.title": "Os meus ecomBots",
+  "dashboard.title": "Os meus EcomBots",
   "delete": "Apagar",
   "downgrade": "Downgrade",
   "editor.blockCard.logicBlock.tooltip.code.label": "Executar código Javascript",
   "editor.blockCard.logicBlock.tooltip.jump.label": "Encaminhar fluxo para outro grupo",
-  "editor.blockCard.logicBlock.tooltip.typebotLink.label": "Link e salte para outro ecomBot",
+  "editor.blockCard.logicBlock.tooltip.typebotLink.label": "Link e salte para outro EcomBot",
   "editor.blocks.bubbles.audio.settings.autoplay.label": "Ativar reprodução automática",
   "editor.blocks.bubbles.audio.settings.chooseFile.label": "Escolher um ficheiro",
   "editor.blocks.bubbles.audio.settings.embedLink.label": "Incorporar link",
@@ -215,10 +215,10 @@
   "editor.sidebarBlocks.sidebar.unlock.label": "Desbloquear barra lateral",
   "errorMessage": "Ocorreu um erro",
   "folders.createFolderButton.label": "Criar uma pasta",
-  "folders.createTypebotButton.label": "Criar um ecomBot",
+  "folders.createTypebotButton.label": "Criar um EcomBot",
   "folders.folderButton.deleteConfirmationMessage": "Tem a certeza de que deseja excluir a pasta <strong>folderName</strong>? (Tudo o que estiver dentro será movido para o seu painel)",
   "folders.typebotButton.delete": "Apagar",
-  "folders.typebotButton.deleteConfirmationMessage": "Tem a certeza de que deseja excluir o seu ecomBot <strong>typebotName</strong>?",
+  "folders.typebotButton.deleteConfirmationMessage": "Tem a certeza de que deseja excluir o seu EcomBot <strong>typebotName</strong>?",
   "folders.typebotButton.deleteConfirmationMessageWarning": "Todos os dados associados serão excluídos e não poderão ser recuperados.",
   "folders.typebotButton.duplicate": "Duplicar",
   "folders.typebotButton.live": "Ao Vivo",
@@ -231,9 +231,9 @@
   "skip": "Saltar",
   "templates.buttons.fromScratchButton.label": "Comece do zero",
   "templates.buttons.fromTemplateButton.label": "Comece a partir de um modelo",
-  "templates.buttons.heading": "Criar um novo ecomBot",
+  "templates.buttons.heading": "Criar um novo EcomBot",
   "templates.buttons.importFileButton.label": "Importar um ficheiro",
-  "templates.importFromFileButon.toastError.description": "Falha ao analisar o ficheiro. Tem certeza de que é um ecomBot?",
+  "templates.importFromFileButon.toastError.description": "Falha ao analisar o ficheiro. Tem certeza de que é um EcomBot?",
   "templates.modal.menuHeading.marketing": "Marketing",
   "templates.modal.menuHeading.new.tag": "Novo",
   "templates.modal.menuHeading.other": "Outros",
@@ -260,7 +260,7 @@
   "theme.sideMenu.global.background.image.select": "Imagem",
   "theme.sideMenu.global.background.none.select": "Nenhum",
   "theme.sideMenu.global.font": "Fonte",
-  "theme.sideMenu.global.typebotBrand": "Mostrar marca do ecomBot",
+  "theme.sideMenu.global.typebotBrand": "Mostrar marca do EcomBot",
   "theme.sideMenu.template": "Templates",
   "theme.sideMenu.template.gallery": "Galeria",
   "theme.sideMenu.template.gallery.avatarPreview.alt": "Pré-visualização do avatar no cartão do tema do template",
@@ -285,7 +285,7 @@
   "workspace.membersList.inviteInput.placeholder": "colega@empresa.com",
   "workspace.membersList.title": "Membros",
   "workspace.membersList.unlockBanner.label": "Atualize o seu plano para trabalhar com mais membros da equipa e desbloquear funcionalidades incríveis",
-  "workspace.settings.deleteButton.confirmMessage": "Tem a certeza de que deseja eliminar o espaço de trabalho {workspaceName}? Todas as suas pastas, ecomBots e resultados serão excluídos permanentemente.",
+  "workspace.settings.deleteButton.confirmMessage": "Tem a certeza de que deseja eliminar o espaço de trabalho {workspaceName}? Todas as suas pastas, EcomBots e resultados serão excluídos permanentemente.",
   "workspace.settings.deleteButton.label": "Eliminar espaço de trabalho",
   "workspace.settings.icon.title": "Ícone",
   "workspace.settings.modal.menu.billingAndUsage.label": "Faturação e uso",
